--- a/src/css/1-timer.css
+++ b/src/css/1-timer.css
@@ -1,12 +1,13 @@
 .timer {
     display: flex;
     gap: 27px;
-    margin-left: 20px;
+    margin-left: 156px;
 }
 
 .field {
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .value {
@@ -53,9 +54,9 @@
 }
 
 #datetime-picker {
-    margin: 32px 8px 32px 20px;
-    max-width: 272px;
-    max-height: 40px;
+    margin: 32px 8px 32px 156px;
+    width: 204px;
+    height: 22px;
     padding: 8px 16px;
     border-radius: 4px;
     border: 1px solid #808080;
